# New-IL

./: .gitignore  DISCLAIMER.md  DISCLAIMER.zh-CN.md  LICENSE  PROGRESS.md  README.md  README.zh-CN.md  progress.txt  pyproject.toml  readme.md
configs/: lerobot_libero_smoke4.yaml  libero_smoke.yaml  openvla_libero_ae_full.yaml
docs/: openpi_newil_runtime.md  plan_pi0_collection.md  third_party.md
docs/building/: 2026-06-17_conda_egl_persistence_plan.md  2026-06-17_headless_dependency_policy.md  2026-06-17_核心算法修改计划.md  2026-06-23_PATCS概率云核心计划.md  2026-06-23_patcs_probability_tube_followups.md  2026-06-24_PATCS_3D概率云阶段记录.md
docs/building/env_snapshots/2026-06-17/: README_restore.md  newil_conda_explicit.txt  newil_environment.yml  newil_import_check.txt  newil_key_pip_show.txt  newil_pip_freeze.txt  newil_uv_pip_freeze.txt  pi_environment.yml  pi_import_check.txt  pi_pip_freeze.txt  pi_uv_pip_freeze.txt
docs/building/env_snapshots/2026-06-17-repaired-image/: newil_conda_explicit.txt  newil_environment.yml  newil_import_check.txt  newil_pip_freeze.txt  pi_environment.yml  pi_import_check.txt  pi_pip_freeze.txt
docs/building/env_snapshots/2026-06-18-image-rebuild/: README.md  dpkg_all.tsv  egl_nvidia_apt_packages.tsv  image_rebuild_notes.md  newil_conda_explicit.txt  newil_environment.yml  nvidia_egl_userspace_files.tsv  pi_conda_explicit.txt  pi_environment.yml  pi_pip_freeze.txt  zshrc_newil_env.txt
docs/en/: readme.md
docs/experiments/: libero_smoke.md  openvla_rlds_ae_plan.md
docs/zh-CN/: readme.md
scripts/: eval-openpi-libero-smoke.sh  make-openpi-libero-queue.sh  repair-newil-headless-env.sh  run-openpi-libero-8gpu.sh  run-openpi-libero-collect-8gpu.sh  start-libero-eval-server.sh  start-openpi-libero-worker.sh  start-openpi-pi05-libero-server.sh
src/new_il/: __init__.py  patcs.py  patcs_probabilistic.py
src/new_il/data/: __init__.py  lerobot_to_hdf5.py  openvla_rlds.py  patcs_artifacts.py  rlds_to_hdf5.py  rollout_manifest.py
src/new_il/integrations/: __init__.py  openpi.py  third_party.py
src/new_il/libero/: __init__.py  download.py  eval_request.py  eval_server.py  evaluate_checkpoint.py  evaluate_openpi_server.py  openpi_queue.py  prepare_subset.py  rollout.py
src/new_il/training/: __init__.py  dataset.py  memory.py  model.py  patcs_loss.py  run_guard.py  train_ae.py  train_ae_placeholder.py
src/new_il/visualization/: __init__.py  cloud3d.py  demo_conditioned_cloud.py  prob_tube_synthetic.py
tests/: test_lerobot_to_hdf5.py  test_libero_rollout_schema.py  test_libero_symlink.py  test_memory_planner.py  test_openpi_integration.py  test_openpi_queue.py  test_patcs.py  test_patcs_artifacts.py  test_patcs_dtw_olive.py  test_patcs_loss.py  test_patcs_polytope.py  test_patcs_probabilistic.py  test_rollout_manifest.py  test_rollout_trajectory_dataset.py
