[project]
name = "new-il"
version = "0.1.0"
description = "Progress-Aware Trajectory Cloud Supervision experiments for imitation learning."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
dependencies = [
  "h5py>=3.11",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "rich>=13.7",
  "scipy>=1.10",
  "tqdm>=4.66",
]

[project.optional-dependencies]
data = [
  "huggingface-hub>=0.25",
]
rlds = [
  "tensorflow-cpu>=2.13",
  "tensorflow-datasets>=4.9",
]
viz = [
  "matplotlib>=3.8",
]
eval = [
  "imageio[ffmpeg]>=2.34",
]
train = [
  "swanlab>=0.7",
  "torch>=2.2",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[project.scripts]
new-il-build-patcs-artifacts = "new_il.data.patcs_artifacts:main"
new-il-download-libero = "new_il.libero.download:main"
new-il-download-openvla-rlds = "new_il.data.openvla_rlds:main"
new-il-eval-libero-checkpoint = "new_il.libero.evaluate_checkpoint:main"
new-il-libero-eval-server = "new_il.libero.eval_server:main"
new-il-plan-memory = "new_il.training.memory:main"
new-il-prepare-libero-subset = "new_il.libero.prepare_subset:main"
new-il-rlds-to-hdf5 = "new_il.data.rlds_to_hdf5:main"
new-il-run = "new_il.training.run_guard:main"
new-il-train = "new_il.training.train_ae:main"
new-il-visualize-cloud = "new_il.visualization.cloud3d:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/new_il"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
